--- a/index.html
+++ b/index.html
@@ -3,11 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Gesture Drawing</title>
-    <!-- MediaPipe -->
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0"></script>
     <!-- p5.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-    <script src="sketch.js" defer></script>
+    <script type="module" src="sketch.js"></script>
     <style>
       body {
         margin: 0;
@@ -15,24 +13,20 @@
         text-align: center;
         background: #f4f4f4;
       }
-
       canvas {
         display: block;
         margin: 0 auto;
         border: 1px solid #ccc;
       }
-
       #controls {
         margin: 10px;
       }
-
       #controls button,
       #controls input[type='range'] {
         margin: 0 5px;
         padding: 6px 12px;
         font-size: 14px;
       }
-
       #downloadLink {
         margin-left: 10px;
       }
