--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Gesture Drawing</title>
+    <!-- MediaPipe Tasks Vision -->
+    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0"></script>
     <!-- p5.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
     <script type="module" src="sketch.js"></script>
@@ -22,7 +24,7 @@
         margin: 10px;
       }
       #controls button,
-      #controls input[type='range'] {
+      #controls input[type="range"] {
         margin: 0 5px;
         padding: 6px 12px;
         font-size: 14px;
