--- a/index.html
+++ b/index.html
@@ -1,38 +1,59 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Gesture Drawing</title>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/tasks-vision@0.10.0"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-    <script type="module" src="sketch.js"></script>
-    <style>
-      body {
-        margin: 0;
-        background: #f4f4f4;
-        text-align: center;
-        font-family: sans-serif;
-      }
-      canvas {
-        display: block;
-        margin: 0 auto;
-        border: 1px solid #ccc;
-      }
-      #controls {
-        margin: 10px;
-      }
-      button {
-        padding: 8px 16px;
-        font-size: 14px;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="controls">
-     // <button id="saveBtn">Save Drawing</button>
-      <button id="saveBtn">Save Drawing as SVG</button>
-     <button id="colorBtn">Change Brush Color</button>
+const response = await fetch(
+  "https://generativelanguage.googleapis.com/v1beta2/models/gemini-pro:generateContent?key=" + API_KEY,
+  {
+    method: "POST",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({
+      contents: [
+        {
+          parts: [
+            {
+              text: "Act as a gentle art therapist. I am feeling [insert emotion here]. Please give me a creative and metaphorical drawing prompt to help me express this emotion."
+            }
+          ]
+        }
+      ]
+    })
+  }
+);
 
-    </div>
-  </body>
-</html>
+const data = await response.json();
+const prompt = data?.candidates?.[0]?.content?.parts?.[0]?.text || "No prompt returned.";
+document.getElementById("prompt-box").innerText = prompt;
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+document.getElementById("promptBtn").addEventListener("click", generatePrompt);
+});
+</script>
+<style>
+body {
+margin: 0;
+background: #f4f4f4;
+text-align: center;
+font-family: sans-serif;
+}
+canvas {
+display: block;
+margin: 0 auto;
+border: 1px solid #ccc;
+}
+#controls {
+margin: 10px;
+}
+button {
+padding: 8px 16px;
+font-size: 14px;
+}
+#prompt-box {
+margin-top: 10px;
+padding: 10px;
+background: white;
+border: 1px solid #ccc;
+max-width: 600px;
+margin-left: auto;
+margin-right: auto;
+}
+</style>
